--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     font-family: 'Inter', sans-serif;
     background: #ffffff;
     color: #222;
@@ -18,7 +19,7 @@ header {
 
 .card {
     position: relative;
-    width: 92vw;
+    width: 90vw;
     max-width: 620px;
     aspect-ratio: 16 / 9;
     margin: 27vh auto;
@@ -159,6 +160,7 @@ header {
 .thumbnail-item p {
     margin: 0;
     font-size: 0.95rem;
+    word-break: break-word;
 }
 
 ul,
